--- a/src/sass/base/_base.scss
+++ b/src/sass/base/_base.scss
@@ -44,17 +44,23 @@ body {
 
 *::-webkit-scrollbar {
   width: 0.5rem;
-}
-
-*::-webkit-scrollbar-track {
-  width: 1rem !important;
-  border-radius: 10px;
-  // box-shadow: 2px 2px 12px #cccccc, -1px -1px 12px #ddd9d9;
-  background: #f1f0fb;
-}
-*::-webkit-scrollbar-thumb {
-  border-radius: 10px;
-  box-shadow: 2px 2px 12px #cccccc inset, -1px -1px 12px #ddd9d9 inset;
+  &-track {
+    width: 1rem !important;
+    border-radius: 10px;
+    // box-shadow: 2px 2px 12px #cccccc, -1px -1px 12px #ddd9d9;
+    background: #f1f0fb;
+  }
+  &-thumb {
+    border-radius: 10px;
+    box-shadow: 2px 2px 12px #cccccc inset, -1px -1px 12px #ddd9d9 inset;
+    &:hover {
+      cursor: grab;
+      box-shadow: 2px 2px 12px #ddd9d9 inset, -1px -1px 12px #747474 inset;
+    }
+    &:active {
+      cursor: grabbing;
+    }
+  }
 }
 
 .wrapper {
@@ -74,22 +80,26 @@ body {
   }
 
   button {
-    align-content: center;
     background-color: #f1f0fb;
     border: none;
-    border-radius: 8px;
-    box-shadow: 5px 5px 8px #cdccd5, -5px -5px 8px #fff;
-    color: #0072bc;
-    display: flex;
+    border-radius: 1rem;
+    color: #747474;
     font-size: 1.6rem;
-    line-height: 2.1rem;
-    padding: 0.5rem 1rem;
-    text-transform: uppercase;
-    justify-content: center;
-    align-items: center;
+    line-height: 2.6rem;
+    font-weight: 500;
+    text-transform: capitalize;
+    padding: 0.85rem 1.7rem;
+    box-shadow: 0.3rem 0.3rem 0.5rem rgb(195 193 198 / 90%),
+      -0.2rem -0.2rem 0.4rem #fff;
 
     &:active {
-      box-shadow: inset 5px 5px 10px #cdccd58c, inset -5px -5px 10px #ffffffbd;
+      box-shadow: inset 0.2rem 0.2rem 0.5rem rgb(195 193 198 / 90%),
+        inset -0.2rem -0.2rem 0.5rem #fff,
+        0.3rem 0.3rem 0.5rem rgb(195 193 198 / 90%), -0.2rem -0.2rem 0.4rem #fff;
+    }
+
+    &:hover {
+      color: #0072bc;
     }
   }
 }
