--- a/src/sass/components/_job.scss
+++ b/src/sass/components/_job.scss
@@ -45,7 +45,7 @@
     border-radius: 8px;
     box-sizing: border-box;
     display: grid;
-    grid-template-columns: 2fr 1fr;
+    grid-template-columns: 1fr;
     padding: 1rem 2rem;
     min-height: 8.7rem;
     margin: 1.6rem 0;
@@ -69,13 +69,17 @@
     //   bottom: -8px;
     // }
     &--priority[tool='false'] {
-      fill: #fff;
+      stroke: #f1f0fb;
+      stroke-width: 2px;
+      fill: none;
       width: 1.2rem;
       height: 1.2rem;
       animation: glowRED 1s ease-in-out infinite alternate;
     }
     &--priority[tool='true'] {
-      fill: #fff;
+      stroke: #f1f0fb;
+      stroke-width: 2px;
+      fill: none;
       width: 1.2rem;
       height: 1.2rem;
       animation: glowGreen 1s ease-in-out infinite alternate;
@@ -124,7 +128,7 @@
     &--to-do,
     &--progress,
     &--done {
-      max-height: calc(100% - 5.5rem);
+      max-height: calc(100% - 6.5rem);
       overflow-y: auto;
       padding-right: 0.8rem;
     }
@@ -159,18 +163,26 @@
 }
 
 .Progress_Status {
-  width: 110%;
+  width: 99%;
   display: flex;
   flex-wrap: nowrap;
-  background-color: #ddd;
-  border-radius: 15px;
+  background-color: #e0e5ec;
+  align-items: center;
+  justify-content: flex-start;
+  border-radius: 1.2rem;
   position: relative;
   height: 1rem;
+  box-shadow: inset 0.2rem 0.2rem 0.5rem rgb(195 193 198 / 90%),
+    inset -0.2rem -0.2rem 0.5rem #fff,
+    0.3rem 0.3rem 0.5rem rgb(195 193 198 / 90%), -0.2rem -0.2rem 0.4rem #fff;
 }
 
 .myprogressBar {
   width: 1%;
-  height: 1rem;
+  box-shadow: inset 0.2rem 0.2rem 0.5rem #2a80b8,
+    inset -0.2rem -0.2rem 0.5rem #0072bc,
+    0.3rem 0.3rem 0.5rem rgb(195 193 198 / 90%), -0.2rem -0.2rem 0.4rem #fff;
+  height: 100%;
   border-radius: 15px;
   background-color: #0072bc;
 }
